// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`error > renders with as correctly 1`] = `
"<section data-slot="root" class="">
  <!--v-if-->
  <p data-slot="statusCode" class="">404</p>
  <h1 data-slot="statusMessage" class="">Not Found</h1>
  <p data-slot="message" class="">The page you are looking for does not exist.</p>
  <div data-slot="links" class=""><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Back to home</span>
      <!--v-if-->
    </button></div>
</section>"
`;

exports[`error > renders with class correctly 1`] = `
"<main data-slot="root" class="min-h-full">
  <!--v-if-->
  <p data-slot="statusCode" class="">404</p>
  <h1 data-slot="statusMessage" class="">Not Found</h1>
  <p data-slot="message" class="">The page you are looking for does not exist.</p>
  <div data-slot="links" class=""><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`error > renders with clear correctly 1`] = `
"<main data-slot="root" class="">
  <!--v-if-->
  <p data-slot="statusCode" class="">404</p>
  <h1 data-slot="statusMessage" class="">Not Found</h1>
  <p data-slot="message" class="">The page you are looking for does not exist.</p>
  <div data-slot="links" class=""><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`error > renders with default slot correctly 1`] = `
"<main data-slot="root" class="">
  <!--v-if-->
  <p data-slot="statusCode" class="">404</p>
  <h1 data-slot="statusMessage" class="">Not Found</h1>
  <p data-slot="message" class="">The page you are looking for does not exist.</p>
  <div data-slot="links" class=""><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`error > renders with error correctly 1`] = `
"<main data-slot="root" class="">
  <!--v-if-->
  <p data-slot="statusCode" class="">404</p>
  <h1 data-slot="statusMessage" class="">Not Found</h1>
  <p data-slot="message" class="">The page you are looking for does not exist.</p>
  <div data-slot="links" class=""><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`error > renders with error using status/statusText correctly 1`] = `
"<main data-slot="root" class="">
  <!--v-if-->
  <p data-slot="statusCode" class="">500</p>
  <h1 data-slot="statusMessage" class="">Internal Server Error</h1>
  <p data-slot="message" class="">Something went wrong.</p>
  <div data-slot="links" class=""><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`error > renders with icon correctly 1`] = `
"<main data-slot="root" class="">
  <div data-slot="leading" class=""><span class="iconify i-lucide:alert-triangle" aria-hidden="true" data-slot="leadingIcon"></span></div>
  <p data-slot="statusCode" class="">404</p>
  <h1 data-slot="statusMessage" class="">Not Found</h1>
  <p data-slot="message" class="">The page you are looking for does not exist.</p>
  <div data-slot="links" class=""><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`error > renders with leading slot correctly 1`] = `
"<main data-slot="root" class="">
  <div data-slot="leading" class="">Leading slot</div>
  <p data-slot="statusCode" class="">404</p>
  <h1 data-slot="statusMessage" class="">Not Found</h1>
  <p data-slot="message" class="">The page you are looking for does not exist.</p>
  <div data-slot="links" class=""><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`error > renders with links slot correctly 1`] = `
"<main data-slot="root" class="">
  <!--v-if-->
  <p data-slot="statusCode" class="">404</p>
  <h1 data-slot="statusMessage" class="">Not Found</h1>
  <p data-slot="message" class="">The page you are looking for does not exist.</p>
  <div data-slot="links" class="">Links slot</div>
</main>"
`;

exports[`error > renders with message slot correctly 1`] = `
"<main data-slot="root" class="">
  <!--v-if-->
  <p data-slot="statusCode" class="">404</p>
  <h1 data-slot="statusMessage" class="">Not Found</h1>
  <p data-slot="message" class="">Message slot</p>
  <div data-slot="links" class=""><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`error > renders with redirect correctly 1`] = `
"<main data-slot="root" class="">
  <!--v-if-->
  <p data-slot="statusCode" class="">404</p>
  <h1 data-slot="statusMessage" class="">Not Found</h1>
  <p data-slot="message" class="">The page you are looking for does not exist.</p>
  <div data-slot="links" class=""><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`error > renders with statusCode slot correctly 1`] = `
"<main data-slot="root" class="">
  <!--v-if-->
  <p data-slot="statusCode" class="">Status code slot</p>
  <h1 data-slot="statusMessage" class="">Not Found</h1>
  <p data-slot="message" class="">The page you are looking for does not exist.</p>
  <div data-slot="links" class=""><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`error > renders with statusMessage slot correctly 1`] = `
"<main data-slot="root" class="">
  <!--v-if-->
  <p data-slot="statusCode" class="">404</p>
  <h1 data-slot="statusMessage" class="">Status message slot</h1>
  <p data-slot="message" class="">The page you are looking for does not exist.</p>
  <div data-slot="links" class=""><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`error > renders with ui correctly 1`] = `
"<main data-slot="root" class="">
  <!--v-if-->
  <p data-slot="statusCode" class="">404</p>
  <h1 data-slot="statusMessage" class="">Not Found</h1>
  <p data-slot="message" class="">The page you are looking for does not exist.</p>
  <div data-slot="links" class="mt-16"><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;
